added second stanza

--- a/index.html
+++ b/index.html
@@ -43,6 +43,40 @@
             <div>
                 Of the Yonghy-Bonghy-Bò …
             </div>
+
+            <div>
+                Once, among the Bong-trees walking
+            </div>
+            <div>
+                Where the early pumpkins blow,
+            </div>
+            <div>
+                To a little heap of stones
+            </div>
+            <div>
+                Came the Yonghy-Bonghy-Bo.
+            </div>
+            <div>
+                There he heard a Lady talking,
+            </div>
+            <div>
+                To some milk-white Hens of Dorking--
+            </div>
+            <div>
+                "'Tis the Lady Jingly Jones!
+            </div>
+            <div>
+                On that little heap of stones
+            </div>
+            <div>
+                Sits the Lady Jingly Jones!"
+            </div>
+            <div>
+                Said the Yonghy-Bonghy-Bo,
+            </div>
+            <div>
+                Said the Yonghy-Bonghy-Bo.
+            </div>
         </section>
     </main>
     
