--- a/index.html
+++ b/index.html
@@ -11,16 +11,16 @@
     <main>
         <section>
             <div>
-                On the Coast of Coromandel
+                On the Coast of <span value="place" id="non-sense-loc">Coromandel</span> 
             </div>
             <div>
-                Where the early pumpkins blow,
+                Where the early <span value="veggies" class="vegatables"> pumpkins </span> blow,
             </div>
             <div>
-                In the middle of the woods
+                In the middle of the <span value="plywood" class="sticks"> woods </span>
             </div>
             <div>
-                Lived the Yonghy-Bonghy-Bò.
+                Lived the <span class="first-name">Yonghy</span>- <span class="middle-name">Bonghy</span>- <span class="last-name">Bò</span>.
             </div>
             <div>
                 Two old chairs, and half a candle, –
@@ -32,29 +32,29 @@
                 These were all his worldly goods:
             </div>
             <div>
-                In the middle of the woods,
+                In the middle of the<span value="plywood" class="sticks"> woods </span>
             </div>
             <div>
                 These were all the worldly goods,
             </div>
             <div>
-                Of the Yonghy-Bonghy-Bò,
+                Of the <span class="first-name">Yonghy</span>- <span class="middle-name">Bonghy</span>- <span class="last-name">Bò</span>,
             </div>
             <div>
-                Of the Yonghy-Bonghy-Bò …
+                Of the <span class="first-name">Yonghy</span>- <span class="middle-name">Bonghy</span>- <span class="last-name">Bò</span> …
             </div>
 
             <div>
                 Once, among the Bong-trees walking
             </div>
             <div>
-                Where the early pumpkins blow,
+                Where the early <span value="veggies" class="vegatables"> pumpkins </span> blow,
             </div>
             <div>
                 To a little heap of stones
             </div>
             <div>
-                Came the Yonghy-Bonghy-Bo.
+                Came the <span class="first-name">Yonghy</span>- <span class="middle-name">Bonghy</span>- <span class="last-name">Bò</span>.
             </div>
             <div>
                 There he heard a Lady talking,
@@ -72,13 +72,23 @@
                 Sits the Lady Jingly Jones!"
             </div>
             <div>
-                Said the Yonghy-Bonghy-Bo,
+                Said the <span class="first-name">Yonghy</span>- <span class="middle-name">Bonghy</span>- <span class="last-name">Bò</span>,
             </div>
             <div>
-                Said the Yonghy-Bonghy-Bo.
+                Said the <span class="first-name">Yonghy</span>- <span class="middle-name">Bonghy</span>- <span class="last-name">Bò</span>.
             </div>
         </section>
+        <!-- input section -->
+        <section>
+        <input placeholder="vegatables" id="non-sense-loc-input">
+        <input type="text" id="vegatables-input">
+        <input type="text" id="gen-input">
+        <input type="text" id="gen-input">
+        <input type="text" id="gen-input">
+        <input type="text" id="gen-input">
+        </section>
     </main>
+    
     
     <script type="module" src="app.js"></script>    
 </body>
