added more inputs and classes

--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
                 Lived the <span class="first-name">Yonghy</span>- <span class="middle-name">Bonghy</span>- <span class="last-name">Bò</span>.
             </div>
             <div>
-                Two old chairs, and half a candle, –
+                Two old <span class="furniture">chairs </span> , and half a <span class="fire">candle</span> , –
             </div>
             <div>
-                One old jug without a handle, –
+                One old <span class="drinking-vessel">jug</span> without a handle, –
             </div>
             <div>
                 These were all his worldly goods:
@@ -80,12 +80,16 @@
         </section>
         <!-- input section -->
         <section>
-        <input placeholder="vegatables" id="non-sense-loc-input">
-        <input type="text" id="vegatables-input">
-        <input type="text" id="gen-input">
-        <input type="text" id="gen-input">
-        <input type="text" id="gen-input">
-        <input type="text" id="gen-input">
+        <input placeholder="Location" id="non-sense-loc-input">
+        <input type="text" placeholder="vegatables" id="veggies-input">
+        <input type="text" placeholder="A Place" id="woods-input">
+        <input type="text" placeholder="First Name" id="first-name-input">
+        <input type="text" placeholder="Middle Name" id="middle-name-input">
+        <input type="text" placeholder="Last Name" id="-input">
+        <input type="text" placeholder="Favorite Furniture (plural)" id="furniture-input">
+        <input type="text" placeholder="Something Flamable" id="candle-input">
+        <input type="text" placeholder="Drinking Vessel" id="jug-input">
+        
         </section>
     </main>
     
