--- a/index.html
+++ b/index.html
@@ -85,10 +85,12 @@
         <input type="text" placeholder="A Place" id="woods-input">
         <input type="text" placeholder="First Name" id="first-name-input">
         <input type="text" placeholder="Middle Name" id="middle-name-input">
-        <input type="text" placeholder="Last Name" id="-input">
+        <input type="text" placeholder="Last Name" id="last-name-input">
         <input type="text" placeholder="Favorite Furniture (plural)" id="furniture-input">
         <input type="text" placeholder="Something Flamable" id="candle-input">
         <input type="text" placeholder="Drinking Vessel" id="jug-input">
+
+        <button id="button">Submit</button>
         
         </section>
     </main>
