event lister added

--- a/index.html
+++ b/index.html
@@ -14,81 +14,46 @@
                 On the Coast of <span value="place" id="non-sense-loc">Coromandel</span> 
             </div>
             <div>
-                Where the early <span value="veggies" class="vegatables"> pumpkins </span> blow,
+                Where the early <span id="vegetables"> pumpkins </span> blow,
             </div>
             <div>
-                In the middle of the <span value="plywood" class="sticks"> woods </span>
+                In the middle of the <span value="plywood" id="sticks"> woods </span>
             </div>
             <div>
-                Lived the <span class="first-name">Yonghy</span>- <span class="middle-name">Bonghy</span>- <span class="last-name">Bò</span>.
+                Lived the <span id="first-name">Yonghy</span>- <span id="middle-name">Bonghy</span>- <span id="last-name">Bò</span>.
             </div>
             <div>
-                Two old <span class="furniture">chairs </span> , and half a <span class="fire">candle</span> , –
+                Two old <span id="furniture">chairs </span> , and half a <span id="fire">candle</span> , –
             </div>
             <div>
-                One old <span class="drinking-vessel">jug</span> without a handle, –
+                One old <span id="drinking-vessel">jug</span> without a handle, –
             </div>
             <div>
                 These were all his worldly goods:
             </div>
             <div>
-                In the middle of the<span value="plywood" class="sticks"> woods </span>
+                In the middle of the woods
             </div>
             <div>
                 These were all the worldly goods,
             </div>
             <div>
-                Of the <span class="first-name">Yonghy</span>- <span class="middle-name">Bonghy</span>- <span class="last-name">Bò</span>,
-            </div>
-            <div>
-                Of the <span class="first-name">Yonghy</span>- <span class="middle-name">Bonghy</span>- <span class="last-name">Bò</span> …
+                Of the Yonghy-Bonghy- Bò,
             </div>
 
-            <div>
-                Once, among the Bong-trees walking
-            </div>
-            <div>
-                Where the early <span value="veggies" class="vegatables"> pumpkins </span> blow,
-            </div>
-            <div>
-                To a little heap of stones
-            </div>
-            <div>
-                Came the <span class="first-name">Yonghy</span>- <span class="middle-name">Bonghy</span>- <span class="last-name">Bò</span>.
-            </div>
-            <div>
-                There he heard a Lady talking,
-            </div>
-            <div>
-                To some milk-white Hens of Dorking--
-            </div>
-            <div>
-                "'Tis the Lady Jingly Jones!
-            </div>
-            <div>
-                On that little heap of stones
-            </div>
-            <div>
-                Sits the Lady Jingly Jones!"
-            </div>
-            <div>
-                Said the <span class="first-name">Yonghy</span>- <span class="middle-name">Bonghy</span>- <span class="last-name">Bò</span>,
-            </div>
-            <div>
-                Said the <span class="first-name">Yonghy</span>- <span class="middle-name">Bonghy</span>- <span class="last-name">Bò</span>.
-            </div>
+            
         </section>
         <!-- input section -->
         <section>
         <input placeholder="Location" id="non-sense-loc-input">
-        <input type="text" placeholder="vegatables" id="veggies-input">
-        <input type="text" placeholder="A Place" id="woods-input">
-        <input type="text" placeholder="First Name" id="first-name-input">
-        <input type="text" placeholder="Middle Name" id="middle-name-input">
-        <input type="text" placeholder="Last Name" id="last-name-input">
-        <input type="text" placeholder="Favorite Furniture (plural)" id="furniture-input">
-        <input type="text" placeholder="Something Flamable" id="candle-input">
-        <input type="text" placeholder="Drinking Vessel" id="jug-input">
+        <input placeholder="vegetables" id="veggies-input">
+        <input placeholder="A Place" id="woods-input">
+        <input placeholder="First Name" id="first-name-input">
+        <input placeholder="Middle Name" id="middle-name-input">
+        <input placeholder="Last Name" id="last-name-input">
+        <input placeholder="Favorite Furniture (plural)" id="furniture-input">
+        <input placeholder="Something Flamable" id="candle-input">
+        <input placeholder="Drinking Vessel" id="jug-input">
 
         <button id="button">Submit</button>
         
