--- a/index.html
+++ b/index.html
@@ -15,64 +15,64 @@
                 On the Coast of <span value="place" id="non-sense-loc">Coromandel</span> 
             </div>
             <div>
-                Where the early <span class="vegetables"> pumpkins </span> blow,
+                Where the early <span class="vegetables">pumpkins</span> blow,
             </div>
             <div>
-                In the middle of the <span class="sticks"> woods </span>
+                In the middle of the <span class="sticks">woods</span>
             </div>
             <div>
-                Lived the <span class="first-name">Yonghy</span>- <span class="middle-name">Bonghy</span>-<span class="last-name">Bò</span>.
+                Lived <span class="first-name">Yonghy</span>-<span class="middle-name">Bonghy</span>-<span class="last-name">Bò</span>.
             </div>
             <div>
-                Two old <span id="furniture">chairs </span> , and half a <span id="fire">candle</span> , –
+                Two old <span id="furniture">chairs</span>, and half a <span id="fire">candle</span>, —
             </div>
             <div>
-                One old <span id="drinking-vessel">jug</span> without a handle, –
+                One old <span id="drinking-vessel">jug</span> without a handle, —
             </div>
             <div>
-                These were all his worldly goods:
+                These were all his worldly goods,
             </div>
             <div>
-                In the middle of the <span class="sticks"> woods </span>
+                In the middle of the <span class="sticks">woods</span>
             </div>
             <div>
                 These were all the worldly goods,
             </div>
             <div>
-                Of the <span class="first-name">Yonghy</span>-<span class="middle-name">Bonghy</span>-<span class="last-name">Bò</span>,
+                Of <span class="first-name">Yonghy</span>-<span class="middle-name">Bonghy</span>-<span class="last-name">Bò</span>,
             </div>
             <div>
-                Of the <span class="first-name">Yonghy</span>-<span class="middle-name">Bonghy</span>-<span class="last-name">Bò</span>.
+                Of <span class="first-name">Yonghy</span>-<span class="middle-name">Bonghy</span>-<span class="last-name">Bò</span>.
             </div>
             <div>
                 Once, among the Bong-trees walking
             </div>
             <div>
-                Where the early <span class="vegetables"> pumpkins </span> gitblow,
+                Where the early <span class="vegetables">pumpkins</span> blow,
             </div>
             <div>
                 To a little heap of stones
             </div>
             <div>
-                Came the <span class="first-name">Yonghy</span>-<span class="middle-name">Bonghy</span>-<span class="last-name">Bò</span>.
+                Came <span class="first-name">Yonghy</span>-<span class="middle-name">Bonghy</span>-<span class="last-name">Bò</span>.
             </div>
             <div>
                 There he heard a Lady talking,
             </div>
             <div>
-                To some milk-white Hens of Dorking,--
+                To some milk-white Hens of Dorking, —
             </div>
             <div>
-                ''Tis the lady Jingly Jones!
+                'Tis the lady Jingly Jones!
             </div>
             <div>
-                'Sits the Lady Jingly Jones!'
+                On that little heap of stones!'
             </div>
             <div>
-                Said the <span class="first-name">Yonghy</span>-<span class="middle-name">Bonghy</span>-<span class="last-name">Bò</span>,
+                Said <span class="first-name">Yonghy</span>-<span class="middle-name">Bonghy</span>-<span class="last-name">Bò</span>,
             </div>
             <div>
-                Said the <span class="first-name">Yonghy</span>-<span class="middle-name">Bonghy</span>-<span class="last-name">Bò</span>.
+                Said <span class="first-name">Yonghy</span>-<span class="middle-name">Bonghy</span>-<span class="last-name">Bò</span>.
             </div>
             
         </section>
