reset button added

--- a/index.html
+++ b/index.html
@@ -95,7 +95,8 @@
         <button id="button">Submit</button>
         <div></div>   
         </section>
-        <button id="button">&#128125;</button>
+        
+        <button id="ufo">&#128125;</button>
     </main>
     <footer>MADMADMADMADMAD</footer>
     
