HTML, CSS, and JS file cleanup

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <main>
         <section class="poem" id="disappear">
             <div>
-                On the Coast of <span value="place" id="non-sense-loc">Coromandel</span> 
+                On the Coast of <span value="place" id="nonsense-loc">Coromandel</span> 
             </div>
             <div>
                 Where the early <span class="vegetables">pumpkins</span> blow,
@@ -82,14 +82,14 @@
         
         <!-- input section -->
         <section class="input-columns">
-        <input placeholder="Location" id="non-sense-loc-input">
-        <input placeholder="vegetables" id="veggies-input">
+        <input placeholder="Location" id="nonsense-loc-input">
+        <input placeholder="Vegetables" id="veggies-input">
         <input placeholder="A Place" id="woods-input">
         <input placeholder="First Name" id="first-name-input">
         <input placeholder="Middle Name" id="middle-name-input">
         <input placeholder="Last Name" id="last-name-input">
         <input placeholder="Favorite Furniture (plural)" id="furniture-input">
-        <input placeholder="Something Flamable" id="candle-input">
+        <input placeholder="Something Flammable" id="candle-input">
         <input placeholder="Drinking Vessel" id="jug-input">
          <!-- submit button-->
         <button id="button">Submit</button>
